# BetterWinSearch

./: .gitignore  Cargo.toml  README.md  cargo.toml  index.db3
src/: leftover.txt  main.rs  test.rs
ui/: app-window.slint
