[package]
name = "BetterWinSearch"
version = "0.1.0"
authors = ["Mrsalai"]
edition = "2024"

[[bin]]
name = "BetterSearch"
path = "src/main.rs"



[dependencies]
regex = "1"
slint = "1.12.1"
notify = "8.1.0"
rusqlite = {version ="0.37.0", features = ["bundled"]}


[build-dependencies]
slint-build = "1.12.1"
notify = "8.1.0"
regex = "1"
rusqlite = {version ="0.37.0", features = ["bundled"]}
